--- a/html/index.html
+++ b/html/index.html
@@ -6,95 +6,84 @@
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
     <link rel="stylesheet" href="../css/fontawesome/fontawesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/Reservia.svg"> 
     <title>Reservia</title>
 </head>
 <body>
-    <div id="page_except_footer">
+    <div id="container">
         <header>
-            <div><img src="../images/Reservia.svg" alt="logo Reservia" /></div>
-            <div id="actions">
+            <img src="../images/Reservia.svg" alt="logo Reservia" />
+            <div>
                 <nav>
                     <ul>
                         <li><a href="#accomodations"><span>----</span>Hébergements<span>----</span></a></li>
                         <li><a href="#entertainments"><span>----</span>Activités<span>----</span></a></li>
                     </ul>
                 </nav>
-                <button type="button" id="sign_in" disabled>S'inscrire</button>
+                <button type="button" disabled>S'inscrire</button>
             </div>
         </header>
         <div id=home_search>
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p id="subtitle">En plein centre ville ou en pleine nature</p>
             <div id="search_bar">
-                <div id="locate">
-                    <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div id="form_bloc">
-                    <form>
-                        <input type="text" name="city" maxlength="60" value="Marseille, France" required id="search_field" /><input type="submit" value="Rechercher" id="search_button" />
-                    </form>
-                </div>    
+                <i class="fas fa-map-marker-alt"></i>
+                <form method="post" action="document.php">
+                    <input type="text" name="city" maxlength="60" value="Marseille, France" required id="search_field" /><input type="submit" value="Rechercher" id="search_button" />
+                </form>    
             </div>
             <div id="filters">
                 <h3>Filtres</h3>
-                <div>
-                    <a href="#" class="filter_link">
-                        <div class="filter">
-                            <div class="filter_icon_plus">
+                <ul>
+                    <li>
+                        <a href="#" class="filter">
+                            <div class="filter_icon_circled">
                                 <i class="fas fa-money-bill-wave"></i>
                             </div>    
-                            <p class="filter_text"><strong>Économique</strong></p>
-                        </div>    
-                    </a>
-                </div>    
-                <div>
-                    <a href="#" class="filter_link">
-                        <div class="filter">        
-                            <div class="filter_icon_plus">
+                            <p><strong>Économique</strong></p>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#" class="filter">      
+                            <div class="filter_icon_circled">
                                 <i class="fas fa-child"></i>
                             </div>    
-                            <p class="filter_text"><strong>Familial</strong></p>
-                        </div>   
-                    </a>
-                </div>  
-                <div> 
-                    <a href="#" class="filter_link">
-                        <div class="filter">
-                            <div class="filter_icon_plus">
+                            <p><strong>Familial</strong></p>
+                        </a>
+                    </li>  
+                    <li>
+                        <a href="#" class="filter">
+                            <div class="filter_icon_circled">
                                 <i class="fas fa-heart"></i>
                             </div>    
-                            <p class="filter_text"><strong>Romantique</strong></p>
-                        </div>    
-                    </a>
-                </div> 
-                <div>
-                    <a href="#" class="filter_link">
-                        <div class="filter">
-                            <div class="filter_icon_plus">
+                            <p><strong>Romantique</strong></p>
+                        </a>
+                    </li> 
+                    <li>
+                        <a href="#" class="filter">
+                            <div class="filter_icon_circled">
                                 <i class="fas fa-dog"></i>
                             </div>    
-                            <p class="filter_text"><strong>Animaux autorisés</strong></p>
-                        </div>    
-                    </a>
-                </div>    
+                            <p><strong>Animaux autorisés</strong></p>
+                        </a>  
+                    </li> 
+                </ul>   
             </div>
             <div id="info">
-                <div id="info_icon_plus">
-                    <i class="fas fa-info" id="icon_info"></i>
+                <div>
+                    <i class="fas fa-info"></i>
                 </div>
-                <p id="text_info"><em>Plus de 500 logements sont disponibles dans cette ville</em></p>
+                <p><em>Plus de 500 logements sont disponibles dans cette ville</em></p>
             </div>
         </div>
         <main>
             <section id="accomodations">
-                <div id="accomodation_results">
+                <section id="accomodation_results">
                     <h2>Hébergements à Marseille</h2>
-                    <div id="six_first_accomodation_results">
+                    <div id="accomodation_results_container">
                         <a href="#">
-                            <article class="accomodation" id="accomodation_cannebiere">
-                                <div>
-                                    <img src="../images/accomodations/cannebiere.jpg" alt="photo d'illustration du logement"/>
-                                </div>
+                            <article id="accomodation_cannebiere">
+                                <img src="../images/accomodations/cannebiere.jpg" alt="photo d'illustration du logement"/>
                                 <div class="accomodation_content">
                                     <h4>Auberge la Cannebière</h4>
                                     <p>Nuit à partir de <em class="price">25€</em></p>
@@ -105,10 +94,8 @@
                             </article>  
                         </a>
                         <a href="#">
-                            <article class="accomodation" id="accomodation_port">
-                                <div>
-                                    <img src="../images/accomodations/port.jpg" alt="photo d'illustration du logement"/>
-                                </div>
+                            <article id="accomodation_port">
+                                <img src="../images/accomodations/port.jpg" alt="photo d'illustration du logement"/>
                                 <div class="accomodation_content">
                                     <h4>Hôtel du Port</h4>
                                     <p>Nuit à partir de <em class="price">52€</em></p>
@@ -119,10 +106,8 @@
                             </article>
                         </a>    
                         <a href="#">
-                            <article class="accomodation" id="accomodation_mouettes">
-                                <div>
-                                    <img src="../images/accomodations/mouettes.jpg" alt="photo d'illustration du logement" />
-                                </div>
+                            <article id="accomodation_mouettes">
+                                <img src="../images/accomodations/mouettes.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Hôtel les Mouettes</h4>
                                     <p>Nuit à partir de <em class="price">76€</em></p>
@@ -133,10 +118,8 @@
                             </article>
                         </a>  
                         <a href="#">
-                            <article class="accomodation" id="accomodation_mer">
-                                <div>
-                                    <img src="../images/accomodations/mer.jpg" alt="photo d'illustration du logement" />
-                                </div>
+                            <article id="accomodation_mer">
+                                <img src="../images/accomodations/mer.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Hôtel de la Mer</h4>
                                     <p>Nuit à partir de <em class="price">48€</em></p>
@@ -147,10 +130,8 @@
                             </article>
                         </a> 
                         <a href="#">   
-                            <article class="accomodation" id="accomodation_panier">
-                                <div>
-                                    <img src="../images/accomodations/panier.jpg" alt="photo d'illustration du logement" />
-                                </div>
+                            <article id="accomodation_panier">
+                               <img src="../images/accomodations/panier.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Auberge le Panier</h4>
                                     <p>Nuit à partir de <em class="price">23€</em></p>
@@ -161,10 +142,8 @@
                             </article>
                         </a>
                         <a href="#">  
-                            <article class="accomodation" id="accomodation_amina">
-                                <div>
-                                    <img src="../images/accomodations/amina.jpg" alt="photo d'illustration du logement" />
-                                </div>
+                            <article id="accomodation_amina">
+                                <img src="../images/accomodations/amina.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Hôtel chez Amina</h4>
                                     <p>Nuit à partir de <em class="price">96€</em></p>
@@ -175,21 +154,19 @@
                             </article>
                         </a>  
                     </div>
-                    <button type="button" disabled id="show_more_button">Afficher plus</button>
-                </div>
+                    <button type="button" disabled>Afficher plus</button>
+                </section>
                 <aside>
-                    <div id="most_popular_title">
+                    <div id="aside_title">
                         <h3>Les plus populaires</h3>
                         <div>
                             <i class="fas fa-chart-line"></i>
                         </div>    
                     </div>
-                    <div id="three_first_popular">
+                    <div id="three_most_popular">
                         <a href="#">
-                            <article class="popular" id="pop_soleil">
-                                <div>
-                                    <img src="../images/accomodations/soleil_matin.jpg" alt="photo d'illustration du logement" />
-                                </div>
+                            <article id="pop_soleil">
+                                <img src="../images/accomodations/soleil_matin.jpg" alt="photo d'illustration du logement" />
                                 <div class="popular_content">
                                     <h4>Hôtel le soleil du <br>matin</h4>
                                     <p>Nuit à partir de <em class="price">128€</em></p>
@@ -200,10 +177,8 @@
                             </article>
                         </a>
                         <a href="#">
-                            <article class="popular" id="pop_coeur">
-                                <div>
-                                    <img src="../images/accomodations/coeur_eau.jpg" alt="photo d'illustration du logement" />
-                                </div>
+                            <article id="pop_coeur">
+                                <img src="../images/accomodations/coeur_eau.jpg" alt="photo d'illustration du logement" />
                                 <div class="popular_content">
                                     <h4>Au coeur de l'eau <br>chambres d'hôtes</h4>
                                     <p>Nuit à partir de <em class="price">71€</em></p>
@@ -214,10 +189,8 @@
                             </article>
                         </a>
                         <a href="#">
-                            <article class="popular" id="pop_bleu">
-                                <div>
-                                    <img src="../images/accomodations/bleu_blanc_m.jpg" alt="photo d'illustration du logement" />
-                                </div>
+                            <article id="pop_bleu">
+                                <img src="../images/accomodations/bleu_blanc_m.jpg" alt="photo d'illustration du logement" />
                                 <div class="popular_content">
                                     <h4>Hôtel tout bleu et <br>blanc</h4>
                                     <p>Nuit à partir de <em class="price">68€</em></p>
@@ -234,40 +207,40 @@
                 <h2>Activités à Marseille</h2>
                 <div id="entertainment_results">
                     <a href="#">
-                        <article class="entertainment" id="entertain_port">
+                        <article id="entertain_port">
                             <img src="../images/entertainments/port.jpg" alt="photo du vieux port"/>
                             <h4>Vieux Port</h4>
                         </article>
                     </a>
                     <div>
                         <a href="#">
-                            <article class="entertainment" id="entertain_fort">
+                            <article id="entertain_fort">
                                 <img src="../images/entertainments/fort_m.jpg" alt="photo du fort de Pomègues" />
                                 <h4>Fort de Pomègues</h4>
                             </article>
                         </a>
                         <a href="#">
-                            <article class="entertainment" id="entertain_frioul">
+                            <article id="entertain_frioul">
                                 <img src="../images/entertainments/frioul.jpg" alt="photo des Îles du Frioul" />
                                 <h4>Îles du Frioul</h4>
                             </article>
                         </a>
                     </div>    
                     <a href="#">
-                        <article class="entertainment" id="entertain_calanques">
+                        <article id="entertain_calanques">
                             <img src="../images/entertainments/calanques_m_corrigee.jpg" alt="photo des Calanques" />
                             <h4>Parc national des Calanques</h4>
                         </article>
                     </a>
                     <div>
                         <a href="#">
-                            <article class="entertainment" id="entertain_garde">
+                            <article id="entertain_garde">
                                 <img src="../images/entertainments/garde.jpg"alt="photo de Notre-Dame-de-la-Garde" />
                                 <h4>Notre-Dame-de-la-Garde</h4>
                             </article>
                         </a>
                         <a href="#">
-                            <article class="entertainment" id="entertain_longchamp">
+                            <article id="entertain_longchamp">
                                 <img src="../images/entertainments/longchamp.jpg" alt="photo du parc de Longchamp" />
                                 <h4>Parc Longchamp</h4>
                             </article>
@@ -278,31 +251,30 @@
         </main>
     </div>     
     <footer>
-            <div id="footer_content">
-                <div>
+            <div id="footer_container">
+                <section>
                     <h3>A propos</h3>
                     <ul>
                         <li><a href="#">Fonctionnement du site</a></li>
                         <li><a href="#">Conditions générales de vente</a></li>
                         <li><a href="#">Donnés et confidentialité</a></li>
                     </ul>
-                </div>
-                <div>
+                </section>
+                <section>
                     <h3>Nos hébergements</h3>
                     <ul>
                         <li><a href="#">Charte qualité</a></li>
                         <li><a href="#">Soumettre votre hôtel</a></li>
                     </ul>
-                </div>
-                <div>
+                </section>
+                <section>
                     <h3>Assistance</h3>
                     <ul>
                         <li><a href="#">Centre d'aide</a></li>
                         <li><a href="#">Nous contacter</a></li>
                     </ul>
-                </div>
+                </section>
             </div>    
-    </footer>
-       
+    </footer>  
 </body>
 </html>
